# euroc_time_synchronization

./: .gitignore  README.md  correct_density_plot.py  density_plot.py  entire_timestamp_plot.py  generate_report_graphs.py  nano_diff_graph.py  report_graphs.py
launch/: sync.launch.py
src/camera_player/: package.xml  setup.cfg  setup.py
src/camera_player/camera_player/: camera_player_node.py
src/imu_player/: package.xml  setup.cfg  setup.py
src/imu_player/imu_player/: imu_player_node.py
src/message_synchronizer/: package.xml  setup.cfg  setup.py
src/message_synchronizer/message_synchronizer/: synchronizer_node.py
src/synchronization_msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/synchronization_msgs/msg/: SyncedPair.msg
